<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_your_url"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/et_url_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_desc"
        android:hint="@string/type_url_here"
        android:singleLine="true"/>

    <Button
        android:id="@+id/bt_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_url_name"
        android:layout_alignParentEnd="true"
        android:text="@string/add"/>


</RelativeLayout>