<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:id="@+id/tv_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/schedule"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/rl_main_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_schedule"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/starts"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_start"
                    android:text="11:00 AM"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_ends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/ends"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_ends"
                    android:layout_alignParentEnd="true"
                    android:text="12:00 PM"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_blank_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/tv_start_time"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="#C3C3C3"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_blank_line"
                android:layout_weight="1"
                android:text="@string/edit"
                android:textColor="#0353F4"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_blank_line"
                android:layout_alignParentEnd="true"
                android:text="@string/delete"
                android:textColor="#F44336"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/tv_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode"
        android:layout_marginTop="20dp"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_below="@id/rl_main_tab"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/ll_modes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_mode"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_whitelist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/whitelist" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:thumb="@drawable/thumb_selector"
            app:track="@drawable/track_selector"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            app:switchMinWidth="120dp"/>

        <TextView
            android:id="@+id/tv_blacklist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/blacklist" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_modes"
        android:layout_marginTop="10dp"
        android:text="@string/whitelist_desp"
        android:textSize="16sp"
        android:textStyle="bold" />


</RelativeLayout>