<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_add_timing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/add_timing"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/bt_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="-2dp"
        android:backgroundTint="@color/white"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_round_close_24" />

    <LinearLayout
        android:id="@+id/ll_blank_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/tv_add_timing"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="#C3C3C3"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <LinearLayout
        android:id="@+id/ll_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_blank_line"
        android:layout_marginTop="20dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/from"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <LinearLayout
                android:id="@+id/ll_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="11:00 AM"
                    android:textSize="18sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_round_expand_more_24" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_to"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/to"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <LinearLayout
                android:id="@+id/ll_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="12:00 PM"
                    android:textSize="18sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_round_expand_more_24" />


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bt_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_time"
        android:layout_marginTop="20dp"
        android:background="#03A9F4"
        android:text="SAVE"
        android:textColor="@color/white" />


</RelativeLayout>